force-app/main/default/objects/Activity/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <label>Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>