force-app/main/default/objects/Activity/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st sales visit</fullName>
            </value>
            <value>
                <fullName>Online meeting</fullName>
            </value>
            <value>
                <fullName>Onsite meeting</fullName>
            </value>
            <value>
                <fullName>Showroom visit</fullName>
            </value>
            <value>
                <fullName>2nd measurement visit</fullName>
            </value>
            <value>
                <fullName>Door knocking</fullName>
            </value>
            <value>
                <fullName>Dropping off flyers</fullName>
            </value>
            <value>
                <fullName>Door hanger/flyer</fullName>
            </value>
            <value>
                <fullName>Direct calling</fullName>
            </value>
            <value>
                <fullName>Stand/Presentation/Trailer event</fullName>
            </value>
            <value>
                <fullName>Shows</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Phone request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>