force-app/main/default/objects/Activity/fields/Notification_customer_email__c.field-meta.xml
<CustomField>
    <fullName>Notification_customer_email__c</fullName>
    <description>Fills in customer email address automatically. used in flows</description>
    <label>Notification customer email</label>
    <type>Email</type>
</CustomField>