force-app/main/default/objects/Activity/fields/Opportunity_number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_number__c</fullName>
    <description>Retrieves opportunity number from related opportunity</description>
    <label>Opportunity number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>