force-app/main/default/objects/Activity/fields/Outlook_Subject__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Subject__c</fullName>
    <formula>text(Event_Type__c) &amp; &quot; - &quot; &amp;  Location &amp; &quot; - &quot; &amp;  Opportunity_number__c</formula>
    <label>Outlook Subject</label>
    <type>Text</type>
</CustomField>