force-app/main/default/objects/Activity/fields/Planned__c.field-meta.xml
<CustomField>
    <fullName>Planned__c</fullName>
    <label>Planned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>