force-app/main/default/objects/Activity/fields/Task_Details__c.field-meta.xml
<CustomField>
    <fullName>Task_Details__c</fullName>
    <label>Task Details</label>
    <type>TextArea</type>
</CustomField>